--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_alignParentLeft="true"
                 android:background="@mipmap/ic_down_main_black"
+                android:visibility="gone"
                 />
             <ImageView
                 android:id="@+id/iv_share"
@@ -31,7 +32,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
                 android:layout_alignParentRight="true"
-                android:background="@mipmap/ic_launcher_round"/>
+                android:background="@mipmap/downloadimage"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,9 +47,9 @@
                     android:textStyle="bold"
                     android:textSize="18dp"
                     android:text="福利盒子"/>
-                <View
-                    android:layout_width="20dp"
-                    android:layout_height="10dp"/>
+                <!--<View-->
+                    <!--android:layout_width="20dp"-->
+                    <!--android:layout_height="10dp"/>-->
                 <TextView
                     android:id="@+id/tv_h5"
                     android:layout_width="80dp"
