--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -3,33 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/ll_user_head"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorOrange1">
-        <ImageView
-            android:id="@+id/iv_user_back"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:background="@mipmap/title_back"/>
-        <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/colorWhite"
-            android:textSize="15dp"
-            android:text="用户管理"/>
-    </RelativeLayout>
 
     <RelativeLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ll_user_head"
         android:background="@color/userback">
 
         <ImageView
@@ -88,6 +66,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/ll_one"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -96,7 +75,7 @@
             android:layout_below="@+id/rl_title_usercenter">
 
             <LinearLayout
-                android:id="@+id/ll_user"
+                android:id="@+id/stop_games"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="1"
@@ -110,12 +89,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorWhite"
-                    android:text="个人信息"/>
+                    android:text="停运游戏"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_download"
+                android:id="@+id/fanlihuodong"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="1"
@@ -129,12 +108,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorWhite"
-                    android:text="下载管理"/>
+                    android:text="返利活动"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ll_fanli"
+                android:id="@+id/download_manager"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="1"
@@ -148,7 +127,74 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorWhite"
-                    android:text="返利中心"/>
+                    android:text="下载管理器"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:layout_below="@+id/ll_one">
+
+            <LinearLayout
+                android:id="@+id/waiter"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@mipmap/ic_launcher_round"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:text="在线客服"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/getmoney"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@mipmap/ic_launcher_round"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:text="创业赚钱"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/hezuo"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@mipmap/ic_launcher_round"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:text="商务合作"/>
 
             </LinearLayout>
 
