2018/03/17 返利功能界面完成 分为任务和订单两个Fragment

--- a/app/src/main/res/layout/activity_btgames.xml
+++ b/app/src/main/res/layout/activity_btgames.xml
@@ -24,5 +24,12 @@
             android:textSize="15dp"
             android:text="BT手游大集合"/>
     </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle_btgame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ll_btgames_head">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
