2018/03/27 腾讯平台分享集成 微博分享存在问题 准备写福利页面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,15 +15,15 @@
             android:layout_alignParentTop="true"
             android:orientation="horizontal"
             android:background="@color/colorOrange1">
+
             <ImageView
-                android:id="@+id/iv_user"
+                android:id="@+id/iv_shares"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_alignParentLeft="true"
                 android:background="@mipmap/ic_down_main_black"
-                android:visibility="gone"
                 />
             <ImageView
                 android:id="@+id/iv_share"
