--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -29,5 +29,355 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/ll_share_head"
         android:background="@mipmap/back"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@id/ll_share_head">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:background="@color/colorBlack"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/tv_jrhd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="今日获得："
+                android:textColor="@color/colorWhite"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/tv_ljhd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:layout_marginLeft="10dp"
+                android:layout_below="@+id/tv_jrhd"
+                android:layout_marginTop="10dp"
+                android:text="累计获得："/>
+
+            <TextView
+                android:id="@+id/tv_money_lj"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
+                android:textColor="@color/colorOrange1"
+                android:layout_alignTop="@+id/tv_ljhd"
+                android:layout_toRightOf="@+id/tv_ljhd"
+                android:background="@mipmap/text_money_bg"
+                android:gravity="center_horizontal"
+                android:text="0"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/read"
+                android:layout_alignTop="@+id/tv_jrhd"
+                android:layout_toRightOf="@+id/tv_money_today"
+                android:layout_marginLeft="5dp"
+                android:text="(仅计算当天)"/>
+
+            <Button
+                android:id="@+id/bt_lingqu"
+                android:layout_width="70dp"
+                android:layout_height="25dp"
+                android:text="领取"
+                android:textColor="@color/colorWhite"
+                android:background="@mipmap/text_bg"
+                android:layout_centerVertical="true"
+                android:layout_below="@+id/tv_money_today"
+                android:layout_toRightOf="@+id/tv_money_lj"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
+                android:visibility="gone"
+                />
+            <Button
+                android:id="@+id/bt_lingqu_black"
+                android:layout_width="70dp"
+                android:layout_height="25dp"
+                android:text="领取"
+                android:textColor="#5f5f5f"
+                android:background="@mipmap/text_bg"
+                android:layout_centerVertical="true"
+                android:layout_below="@+id/tv_money_today"
+                android:layout_toRightOf="@+id/tv_money_lj"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_money_today"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
+                android:text="0"
+                android:textColor="@color/colorOrange1"
+                android:background="@mipmap/text_money_bg"
+                android:gravity="center_horizontal"
+                android:layout_alignTop="@+id/tv_jrhd"
+                android:layout_toRightOf="@+id/tv_jrhd"
+                android:layout_toEndOf="@+id/tv_jrhd"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="五十以上可以领取，详情查看分享说明。"
+                android:textColor="#928e8e"
+                android:textSize="12dp"
+                android:layout_alignLeft="@+id/tv_jrhd"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="7dp"
+                android:layout_below="@+id/tv_ljhd"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorBlack">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#3A3940">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorOrange1"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="任务①:"/>
+
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/ssdk_oks_classic_wechat"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/tv_weixin"
+                    android:layout_toEndOf="@+id/tv_weixin" />
+                <TextView
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="分享微信好友或群"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="2dp"
+
+                    android:textColor="@color/colorWhite"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+
+                <Button
+                    android:id="@+id/bt_weichate"
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:text="分享"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/colorWhite"
+                    android:background="@mipmap/text_bg"
+                    android:layout_centerVertical="true"
+
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+                <TextView
+                    android:id="@+id/tv_weixin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="已完成"
+                    android:textColor="@color/colorGreen"
+                    android:visibility="gone"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorOrange1"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="任务②:"/>
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/ssdk_oks_classic_qq"/>
+                <TextView
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="2dp"
+                    android:text="分享QQ好友或群"
+                    android:textColor="@color/colorWhite"/>
+                <Button
+                    android:id="@+id/bt_qq"
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="分享"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/colorWhite"
+                    android:background="@mipmap/text_bg"/>
+                <TextView
+                    android:id="@+id/tv_qq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="已完成"
+                    android:textColor="@color/colorGreen"
+                    android:visibility="gone"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorOrange1"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="任务③:"/>
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/ssdk_oks_classic_wechatmoments"/>
+                <TextView
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="2dp"
+                    android:text="分享微信朋友圈"
+                    android:textColor="@color/colorWhite"/>
+                <Button
+                    android:id="@+id/bt_pengyouquan"
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="分享"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/colorWhite"
+                    android:background="@mipmap/text_bg"/>
+                <TextView
+                    android:id="@+id/tv_pengyouquan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="已完成"
+                    android:textColor="@color/colorGreen"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorOrange1"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="任务④:"/>
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/ssdk_oks_classic_qzone"/>
+                <TextView
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="2dp"
+                    android:text="分享QQ空间"
+                    android:textColor="@color/colorWhite"/>
+                <Button
+                    android:id="@+id/bt_qqkongjian"
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="分享"
+                    android:textColor="@color/colorWhite"
+                    android:background="@mipmap/text_bg"/>
+                <TextView
+                    android:id="@+id/tv_qqkongjian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="已完成"
+                    android:textColor="@color/colorGreen"
+                    android:visibility="gone"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorOrange1"
+                    android:textSize="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="任务⑤:"/>
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/ssdk_oks_classic_sinaweibo"/>
+                <TextView
+                    android:layout_width="142dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="2dp"
+                    android:text="分享微博"
+                    android:textColor="@color/colorWhite"/>
+                <Button
+                    android:id="@+id/bt_sinaweibo"
+                    android:layout_width="50dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="分享"
+                    android:textColor="@color/colorWhite"
+                    android:background="@mipmap/text_bg"/>
+                <TextView
+                    android:id="@+id/tv_sinaweibo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="已完成"
+                    android:textColor="@color/colorGreen"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
